--- a/app/views/acadamic_announcements/index.html.erb
+++ b/app/views/acadamic_announcements/index.html.erb
@@ -33,4 +33,4 @@
 
 </table>
 
-<%= link_to "New acadamic announcement", new_acadamic_announcement_path %>
+<%= link_to "New acadamic announcement", new_acadamic_announcement_path, class: "btn btn-primary" %>
