--- a/app/views/acadamic_programs/index.html.erb
+++ b/app/views/acadamic_programs/index.html.erb
@@ -30,4 +30,4 @@
 
 </table>
 
-<%= link_to "New acadamic program", new_acadamic_program_path %>
+<%= link_to "New acadamic program", new_acadamic_program_path, class: "btn btn-primary" %>
