--- a/app/views/acadamic_years/index.html.erb
+++ b/app/views/acadamic_years/index.html.erb
@@ -11,4 +11,4 @@
   <% end %>
 </div>
 
-<%= link_to "New acadamic year", new_acadamic_year_path %>
+<%= link_to "New acadamic year", new_acadamic_year_path, class: "btn btn-primary" %>
