--- a/app/views/applicants/_form.html.erb
+++ b/app/views/applicants/_form.html.erb
@@ -10,28 +10,29 @@
       </ul>
     </div>
   <% end %>
-
-  <div>
+  <div class="row">
+  <div class="col-2">
     <%= form.label :first_name, style: "display: block" %>
-    <%= form.text_field :first_name %>
+    <%= form.text_field :first_name, class: "form-control"%>
   </div>
 
-  <div>
+  <div class="col-2">
     <%= form.label :middle_name, style: "display: block" %>
-    <%= form.text_field :middle_name %>
+    <%= form.text_field :middle_name, class: "form-control" %>
   </div>
 
-  <div>
+  <div class="col-2">
     <%= form.label :last_name, style: "display: block" %>
-    <%= form.text_field :last_name %>
+    <%= form.text_field :last_name, class: "form-control"%>
   </div>
 
-   <div>
+   <div class="col-2">
     <%= form.label :email, style: "display: block" %>
-    <%= form.text_field :email %>
+    <%= form.text_field :email, class: "form-control"%>
    </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="col-2">
+    <%= form.submit class: "btn btn-primary mt-4"%>
   </div>
 <% end %>
+</div>
