--- a/app/views/applicants/index.html.erb
+++ b/app/views/applicants/index.html.erb
@@ -2,13 +2,32 @@
 
 <h1>Applicants</h1>
 
-<div id="applicants">
-  <% @applicants.each do |applicant| %>
-    <%= render applicant %>
-    <p>
-      <%= link_to "Show this applicant", applicant %>
-    </p>
-  <% end %>
-</div>
+<table class="table table-striped table-hover table-bordered">
+  <thead>
+    <tr>
+      <th>First Name</th>
+      <th>Middle Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @applicants.each do |applicant| %>
+      <tr>
+        <td><%= applicant.first_name %></td>
+        <td><%= applicant.middle_name %></td> 
+        <td><%= applicant.last_name %></td>
+        <td><%= applicant.email %></td>
+        <td>
+          <%= link_to "Show", applicant %>
+          &nbsp;
+          <%= link_to "Edit", edit_applicant_path(applicant) %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 
-<%= link_to "New applicant", new_applicant_path %>
+</table>
+
+<%= link_to "New applicant", new_applicant_path, class: "btn btn-primary" %>
