--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
 
           <ul class="navbar-nav d-flex flex-row">
             <li class="nav-item mx-3">
+              <a class="nav-link text-light" href="<%=applicants_path%>">Applicant</a>
+            </li>
+            <li class="nav-item mx-3">
               <a class="nav-link text-light" href="<%=acadamic_announcements_path%>">Acadamic Announcements</a>
             </li>
             <li class="nav-item mx-3">
